[gd_scene load_steps=4 format=3 uid="uid://dajpl8ky8fm1l"]

[ext_resource type="Script" path="res://source/TowerController.gd" id="1_22pnp"]

[sub_resource type="QuadMesh" id="QuadMesh_vaxhq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j6vll"]
radius = 10.2956

[node name="Tower" type="Node2D"]
position = Vector2(759, 190)
script = ExtResource("1_22pnp")
attack_range = 100.0
attack_damage = 5.0
attack_speed = 3.0

[node name="AttackSpeedTimer" type="Timer" parent="."]

[node name="Sprite" type="MeshInstance2D" parent="."]
modulate = Color(0, 0.666667, 1, 1)
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(50, 50)
mesh = SubResource("QuadMesh_vaxhq")

[node name="RangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_j6vll")

[connection signal="timeout" from="AttackSpeedTimer" to="." method="_attack"]
[connection signal="area_entered" from="RangeArea" to="." method="_path_entity_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_path_entity_exited"]
